# palindrome-checker-starter

./: README.md
config/: gatorgrade.yml
palindromechecker/: pyproject.toml
palindromechecker/palindromechecker/: main.py  palindrome.py  util.py
palindromechecker/tests/: test_main.py  test_palindrome.py  test_util.py
writing/: reflection.md
